# genclimate_backend

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yaml  main.py  preview.html  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Dockerfile-checkpoint  README-checkpoint.md  config-checkpoint.py  docker-compose-checkpoint.yaml  requirements-checkpoint.txt
auth/: bearer.py
core/: __init__.py  async_requests.py  logger.py  s3_client.py  schemas.py
core/.ipynb_checkpoints/: data_loader-checkpoint.py
example/: out_region.json
example/.ipynb_checkpoints/: out_point-checkpoint.json
routers/: forecast.py
routers/.ipynb_checkpoints/: forecast-checkpoint.py
