[project]

name = "genclimate-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.8.1",
    "pydantic-settings==2.2.1",
    "xarray==2024.2.0",
    "zarr==2.18.0",
    "numcodecs==0.15.0",
    "aiohttp==3.9.5",
    "python-dateutil==2.9.0.post0",
    "cachetools==5.3.3",
    "numpy",
    "pandas",
    "plotly==5.22.0",
    "netcdf4>=1.6.0",
    "h5netcdf>=1.2.0",
    "botocore>=1.34.0",
    "boto3>=1.40.22",
    "orjson>=3.11.3",
]

[dependency-groups]
dev = ["boto3-stubs>=1.40.22", "ruff>=0.12.11"]

[tool.ruff]
line-length = 120
